--- a/server/dashboard/templates/dashboard/upload.html
+++ b/server/dashboard/templates/dashboard/upload.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subir Archivos - PA vs SV</title>
     <link rel="stylesheet" href="{% static 'dashboard/vendor/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'dashboard/utilities.css' %}">
-    <link rel="stylesheet" href="{% static 'dashboard/liderman_theme.css' %}">
+    <link rel="stylesheet" href="{% static 'dashboard/utilities.css' %}?v={% now 'U' %}">
+    <link rel="stylesheet" href="{% static 'dashboard/liderman_theme.css' %}?v={% now 'U' %}">
 </head>
 
 <body class="min-h-screen" data-api-root="{% url 'dashboard:main' %}"
